--- a/src/app/Items/items.component.html
+++ b/src/app/Items/items.component.html
@@ -1,21 +1,28 @@
 <h1 class="center" style="padding-bottom: 30px;">{{getGreeting()}} user!</h1>
 <h2 class="center">Items</h2>
 
+
+
+<div></div>
 <div class="accordion" class="list-group"  id="accordionExample">
     <div *ngFor="let Item of Items" class="accordion-item">
-      <h2 class="accordion-header" attr.id="heading{{quest.title}}">
+      <h2 class="accordion-header" attr.id="heading{{Item.title}}">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" [attr.data-bs-target]="'#collapse' + Item.title" aria-expanded="true" attr.aria-controls="collapse{{Item.title}}">
-          {{quest.description}}
+          {{Item.title}}
         </button>
       </h2>
     <div attr.id="collapse{{Item.title}}" class="accordion-collapse collapse" attr.aria-labelledby="heading{{Item.title}}" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <ul *ngFor="let Item of Items" >
+          <li>
+            {{Item.description}} 
+          </li>              
+        </ul>         
+    </div>
     </div>
   </div>  
 </div><br/>
 
-<div class="progress" style="width: 315px; margin: auto; ">
-  <div id="progressskrrt" class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-</div>
 
 
 
