--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<div style="background-color: rgba(61, 57, 57, 0.4) ;"> 
 <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">AniFigures</a>
@@ -17,11 +18,11 @@
             Categories
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">All items</a></li>
+            <li><a class="dropdown-item" href="/items">All items</a></li>
             <li><a class="dropdown-item" href="#">Figurines</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">DragonBall</a></li>
-            <li><a class="dropdown-item" href="#">Naruto</a></li>
+            <li><a class="dropdown-item" href="/naruto">Naruto</a></li>
             <li><a class="dropdown-item" href="#">Attack on Titan</a></li>
           </ul>
         </li>
@@ -43,3 +44,4 @@
 
 <app-public-page></app-public-page>
 <router-outlet></router-outlet>
+</div>
