--- a/src/app/naruto-page/naruto-page.component.html
+++ b/src/app/naruto-page/naruto-page.component.html
@@ -1,11 +1,10 @@
-<br/>
-<h1 class="center" style="padding-bottom: 30px;">{{getGreeting()}} user!</h1>
-<h2 class="center">Items</h2>
+<h2 class="center">Naruto items</h2>
 
 
-<div class="container" >
+ <div class="container" >
   <div class="row justify-content-center" style="text-align: center;">
-	  <div *ngFor="let Item of Items" class="col-md-5 col-sm-5">
+	<!-- <div *ngIf="Item.Category = 2"> -->
+        <div *ngFor="let Item of Items" class="col-md-5 col-sm-5">
 	  	<figure class="card card-product-grid">
 		  	<div  class="img-wrap"> <img src="{{Item.picture}}" height="600"/> </div>
 		  	<figcaption>
@@ -13,8 +12,9 @@
 		  		<div class="price mt-2">${{Item.price}}</div> 
 	  		</figcaption>
 	  	</figure> 
-  	</div>
- </div>
+  	    </div>
+    </div>  
+</div>  
 
 
 
