--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,47 +1,6 @@
-<div style="background-color: rgba(61, 57, 57, 0.4) ;"> 
-<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">AniFigures</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Donate</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Categories
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/items">All items</a></li>
-            <li><a class="dropdown-item" href="#">Figurines</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">DragonBall</a></li>
-            <li><a class="dropdown-item" href="/naruto">Naruto</a></li>
-            <li><a class="dropdown-item" href="#">Attack on Titan</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <button class="btn btn-outline-success" type="submit" (click)="login()" *ngIf="!isLoggedIn()">Log in</button>
-        </li>
-        <li class="nav-item">
-          <button class="btn btn-outline-success" type="submit" (click)="logout()" *ngIf="isLoggedIn()">Log out</button>
-        </li>
-      </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
-  </div>
-</nav>
-
-
+<meta name="referrer" content="unsafe-url">
+<app-header></app-header>
+<app-microsoft-login></app-microsoft-login>
+<app-registration></app-registration>
 <app-public-page></app-public-page>
 <router-outlet></router-outlet>
-</div>
