Added possibility to add item in app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 <app-header></app-header>
 <app-microsoft-login></app-microsoft-login>
 <app-registration></app-registration>
+<app-additem></app-additem>
 <app-public-page></app-public-page>
 <router-outlet></router-outlet>
