--- a/src/app/Items/items.component.html
+++ b/src/app/Items/items.component.html
@@ -14,7 +14,7 @@
 		  		<div class="description mt-2">{{Item.description}}</div>
 				  <div class="price mt-2">${{Item.price}}</div> 
 				  <div class="category mt-2">{{Item.category}}</div> 
-				  <button class="btn btn-lg btn-outline-primary" (click)="openModal(content, updateItem)">Update item</button>
+				  <button class="btn btn-lg btn-outline-primary" (click)="openModal(content, Item)">Update item</button>
 	  		</figcaption>
 	  	</figure> 
   	</div>
