--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,5 @@
 <app-registration></app-registration>
 
 <app-public-page></app-public-page>
+<app-chat></app-chat>
 <router-outlet></router-outlet>
