--- a/src/app/Items/items.component.html
+++ b/src/app/Items/items.component.html
@@ -14,8 +14,8 @@
 		  		<div class="description mt-2">{{Item.description}}</div>
 				  <div class="price mt-2">${{Item.price}}</div> 
 				  <div class="category mt-2">{{Item.category}}</div> 
-				  <button class="btn btn-lg btn-outline-primary" (click)="openModal(content, Item)">Update item</button>
-				  <button type="button" class="btn btn-outline-dark" (click)="reloadCurrentPage()" (click)="deleteItems(Item)">Delete</button>
+				  <button class="btn btn-lg btn-outline-info" (click)="openModal(content, Item)">Update item</button>
+				  <button type="button" class="btn btn-outline-danger" (click)="reloadCurrentPage()" (click)="deleteItems(Item)">Delete</button>
 	  		</figcaption>
 	  	</figure> 
   	</div>
