--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,6 +11,9 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
+              <app-microsoft-login></app-microsoft-login>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/owned">Owned items</a>
             </li>
             <li class="nav-item">
@@ -27,7 +30,7 @@
                 <li><a class="dropdown-item" href="#">DragonBall</a></li>
                 <li><a class="dropdown-item" href="/naruto">Naruto</a></li>
                 <li><a class="dropdown-item" href="#">Attack on Titan</a></li>
-              </ul>
+              </ul>        
           </ul>
           <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
