--- a/src/app/AddItem/additem.component.html
+++ b/src/app/AddItem/additem.component.html
@@ -34,7 +34,7 @@
 
 </ng-template>
 
-<button class="btn btn-lg btn-outline-primary" (click)="openModal(content)">Add item</button>
+<button class="btn btn-lg btn-outline-success" (click)="openModal(content)">Add item</button>
 
 
 
