--- a/src/app/user-items/user-items.component.html
+++ b/src/app/user-items/user-items.component.html
@@ -13,3 +13,6 @@
             </figure> 
         </div>
    </div>
+
+   <div><button class="btn btn-sm btn-primary" style="margin: 10px" (click)="getItemsByUserId()">Get by id</button></div>
+
